--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Lisa Nguyen",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "mongoose": "^5.0.3",
     "passport": "^0.4.0",
     "passport-spotify": "^0.3.1"
   }
