--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "9.3.0",
+    "npm": "5.5.1"
+  },
   "scripts": {
     "start": "node index.js"
   },
