--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "reactstrap": "^5.0.0-beta",
     "redux": "^3.7.2"
   },
   "scripts": {
